# research-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  schema.sql  skills-lock.json
docs/: production-grade-qa.md
src/research_agent/: answer_compiler.py  config.py  domain.py  evaluation.py  execution_logger.py  main.py  orchestrator.py  query_enhancer.py  reporting.py
src/research_agent/llm/: gemini.py  openrouter.py
src/research_agent/persistence/: base.py  file_repository.py  memory.py  postgres.py
src/research_agent/tools/: __init__.py  base.py  calculator.py  india_tool.py  vector_search.py  web_search.py
src/research_agent/vector_search/: __init__.py  cache.py  chunker.py  cleaner.py  embeddings.py  index.py  pdf_loader.py  types.py
src/research_agent/web_search/: cache.py  client.py  types.py
