[project]
name = "research-agent"
version = "0.1.0"
description = "Terminal-first AI research assistant scaffold"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.7.0",
    "ddgs>=9.0.0",
    "pdfplumber>=0.11.0",
]

[project.scripts]
research-agent = "research_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
